# Deja-Vu_Air-Traffic_Manager_Co-Pilot

./: .gitignore  CLAUDE.md  README.md  plan.md  scaffolding.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: actions.py  agents.py  briefings.py  chat.py  map.py  scenarios.py  voice.py
backend/app/core/: __init__.py  auditor.py  confidence.py  dataset.py  flight_interpolation.py  geo.py  historian.py  recommendations.py  risk_scoring.py  risko.py  schemas.py  sector_occupancy.py  time_bins.py  weather_conflicts.py
backend/app/services/: action_preview_service.py  agent_service.py  ai_service.py  briefing_service.py  chat_service.py  map_interaction_service.py  scenario_service.py  transcription_service.py  voice_service.py
backend/tests/: test_core.py
frontend/: README.md  dejavu_agents.html  frontend.md  index.html  mockup.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ActionCards.tsx  AgentChatPanel.tsx  AgentRow.tsx  AgentToken.tsx  Alarm.tsx  BriefToken.tsx  ConfidenceBar.tsx  DraggablePanel.tsx  LayerControls.tsx  MeetingRoom.tsx  MeetingRoomButton.tsx  OverlayLayer.tsx  RadarMap.tsx  RiskToken.tsx  Skeletons.tsx  StoryMode.tsx  TimeWarpSlider.tsx  TopBar.tsx  VoiceButton.tsx  agentFaces.tsx  useDrag.ts
frontend/src/data/mock/: action-preview.json  (+6 more)
frontend/src/lib/: airports.ts  api.ts  format.ts  projection.ts  time.ts  types.ts
frontend/src/state/: store.ts
frontend/src/styles/: components.css  globals.css  tokens.css
