[project]
name = "deja-vu-intelligence-backend"
version = "0.1.0"
description = "Backend API for the DĒJÅ VŪ Intelligence ASI hackathon project."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "numpy>=1.26",
  "pydantic>=2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
ai = [
  "anthropic>=0.39",
  "elevenlabs>=1.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
